ghc-4335c07/testsuite/tests/annotations/should_fail/annfail01.hs
module Annfail01 where
-- Testing annotating things that don't exist

{-# ANN type Foo (1 :: Int) #-}
{-# ANN f (1 :: Int) #-}